# 23-thesis-test-project

./: .gitignore  .gitmodules  .swiftlint.yml  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  sonar-project.properties
.github/workflows/: build.yml
Test Project.xcworkspace/: contents.xcworkspacedata
Test Project/Test Project/: ContentView.swift  Test_ProjectApp.swift
Test Project/Test Project.xcodeproj/: project.pbxproj
Test Project/Test Project/Buttons/: ButtonStyleTests.swift
Test Project/Test Project/Buttons/FeedbackSound/: TapGestureFeedbackSound.swift
Test Project/Test Project/Buttons/Toggle/: TriggeringToggleButtonBackground.swift
Test Project/Test Project/NavigationBars/NavigationBarTitle/: NavigationTitleEdge.swift  NavigationTitleOk.swift  NavigationTitleState.swift  NavigationTitleTooLong.swift  NavigationTitleVariable.swift
TestProject.xcworkspace/: contents.xcworkspacedata
TestProject/TestProject/: ContentView.swift  TestProjectApp.swift
TestProject/TestProject.xcodeproj/: project.pbxproj
TestProject/TestProject/Button/FeedbackSound/NonTriggering/: Button_FeedbackSound_AVAudioPlayer.swift  Button_FeedbackSound_AudioServicesPlaySystemSound.swift  (+1 more)
TestProject/TestProject/Extensions/: View+onTapGestureWithSoundAndHoverEffect.swift
TestProject/TestProject/Ornaments/SystemProvided/: Ornament_SystemProvided_TabBar.swift  Ornament_SystemProvided_Toolbar.swift
TestProject/TestProject/Sidebar/Visibility/: Sidebar_Visibility_Hidden.swift
TestProject/TestProject/TabBar/MoveToSidebar/: TabBar_MoveToSideBar.swift
scripts/: swiftlint.sh
(+49 files in other folders)
